Fixed index page dark mode problem. Dark mode button modified.

--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,23 @@
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: rgba(255, 255, 0, 0.137);
 }
+
 /* Table bold outline */
 .table {
   outline-style: solid;
   outline-width: 2px;
 }
+
 /* Bolder text for data fields in the table */
 .table td {
   font-weight: 500;
 }
+
+body {
+  background-color: white;
+  color: black;
+}
+
 body.dark-mode {
   background-color: #121212;
   color: #e0e0e0;
